snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/maven-metadata.xml.md5
aceb97f9ed6505b431de51b4c109bed1